[package]
name = "redusty"
version = "0.1.0"
authors = ["Mustafa Can <56972419+mustcalypse@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.17.0"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0.58"
telegram-bot = "0.7"
futures = "0.3.6"
tokio = { version = "0.2", features = ["full"] }